--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -6,6 +6,7 @@ on:
 jobs:
   check-python-version:
     runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, 'DO_NOT_TRIGGER_ACTIONS')"
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
