--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -12,5 +12,8 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: '3.8'
-      - run: python -m pip install --upgrade pip
-      - run: python --version
+      - name: Setup
+        run: python -m pip install --upgrade pip
+      - run: | 
+          python my_script
+          head templates/my_file.txt
