--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -15,5 +15,5 @@ jobs:
       - name: Setup
         run: python -m pip install --upgrade pip
       - run: | 
-          python my_script
+          python my_script.py
           head templates/my_file.txt
