--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -17,3 +17,10 @@ jobs:
       - run: | 
           python my_script.py
           head templates/my_file.txt
+      - name: Push generated file
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add .
+          git commit -m "added generated file DO_NOT_TRIGGER_ACTIONS"
+          git push
